# find-doctor

./: .gitignore  CLAUDE.md  Makefile  SYSTEM_DESIGN.md  docker-compose.yml  pyproject.toml
airflow/: .env.example  docker-compose.yaml
airflow/dags/: __init__.py  daily_collect.py
airflow/dags/utils/: __init__.py
infra/docker/: admin-api.Dockerfile  client-api.Dockerfile  collector.Dockerfile
rules/hospitals/: sample_hospital.yaml  seoul_univ.yaml
rules/schemas/: rule_schema.json
